--- a/user_home/templates/user_home/profile.html
+++ b/user_home/templates/user_home/profile.html
@@ -48,7 +48,7 @@
 
                 <form class="login100-form validate-form">
                     <span class="login100-form-title">
-                        Edit Profile
+                        Profile
                     </span>
 
                     <div class="wrap-input100 validate-input" data-validate="Valid number is of 10 integers">
@@ -69,13 +69,6 @@
                         </span>
                     </div>
 
-                    <!-- <div class="wrap-input100">
-                        <input class="input100" type="text" name="Language" placeholder="Language" onfocus="this.value=''" value="English">
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-                            <i class="fa fa-language" aria-hidden="true"></i>
-                        </span>
-                    </div> -->
 
                     <div class="wrap-input100">
                         <input class="input100" type="text" name="Location" placeholder="Location"
@@ -86,7 +79,7 @@
                         </span>
                     </div>
 
-                    <div class="wrap-input100" style="outline: none;">
+                    <!-- <div class="wrap-input100" style="outline: none;">
                         <select class="input100" name="Language" placeholder="Language">
                             <option value="English">English</option>
                             <option value="Hindi">Hindi</option>
@@ -97,7 +90,7 @@
                         <span class="symbol-input100">
                             <i class="fa fa-language" aria-hidden="true"></i>
                         </span>
-                    </div>
+                    </div> -->
 
                     <div class="row">
                         <div class="col-md-6">
