--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13976,7 +13976,7 @@ iframe {
     position: relative;
     padding: 15em 0;
     background: #eeeef0;
-  } 
+  }
       .ftco-section-parallax .parallax-img .img{
       background-size: cover;
       background-repeat: no-repeat;
@@ -14156,10 +14156,13 @@ iframe {
 }
 
 .block-20-3 .thistext {
+  font-weight: bolder;
+  font-size: medium;
+  text-align: center;
   position: absolute;
-  color: white;
-  bottom: 8px;
-  left: 16px;
+  color: rgb(227, 227, 241);
+  bottom: 5px;
+  left: 90px;
 }
 
 /*  */
@@ -15642,9 +15645,10 @@ td {
 }
 
 .product__details__text .primary-btn {
-	padding: 16px 28px 14px;
-	margin-right: 6px;
-	margin-bottom: 5px;
+	padding: 12px 23px 10px;
+	margin-right: 3px;
+  margin-bottom: 5px;
+  border-radius: 5px;
 }
 
 .product__details__text .heart-icon {
@@ -15705,13 +15709,14 @@ td {
 }
 
 .pro-qty {
-	width: 140px;
-	height: 50px;
+	width: 137px;
+	height: 46px;
 	display: inline-block;
 	position: relative;
 	text-align: center;
-	background: #f5f5f5;
-	margin-bottom: 5px;
+	background: #e7e4e4;
+  margin-bottom: 5px;
+  border-radius: 5px;
 }
 
 .pro-qty input {
@@ -16245,4 +16250,171 @@ td {
 	letter-spacing: 2px;
 	width: 100%;
 	margin-top: 10px;
+}
+
+
+/* ----------------------------
+  shop_now ----------------- */
+  /* ---------- cards ---------- */
+
+
+  .box-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 1200px;
+    transform-style: preserve-3d;
+}
+
+.box-container .box {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    margin: 40px;
+    background: #7BC9A2;
+    border-radius: 20px;
+    transform-style: preserve-3d;
+}
+
+.box-container .box::before {
+    content: 'Farm';
+    position: absolute;
+    top: 28px;
+    left: 54px;
+    /* align-items: center; */
+    /* text-align: center; */
+    font-size: 4em;
+    font-weight: 900;
+    color: #000000;
+    font-style: italic;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+
+.box-container .box::after {
+    content: 'Product';
+    position: absolute;
+    bottom: 28px;
+    left: 8px;
+    font-size: 4em;
+    font-weight: 900;
+    color: #000000;
+    font-style: italic;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.box-container .box:hover::before,
+.box-container .box:hover::after {
+    opacity: 0.04;
+}
+
+.box-container .box .name {
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    transform-style: preserve-3d;
+    transform: translate3d(0, 0, 75px);
+    transition: 0.5s;
+    opacity: 0;
+    z-index: 10;
+}
+
+.box-container .box:hover .name {
+    top: 40px;
+    opacity: 1;
+}
+
+.box-container .box .price {
+  position: absolute;
+  bottom: 20;
+  left: 0;
+  text-align: center;
+  color: #fff;
+  width: 100%;
+  transform-style: preserve-3d;
+  transform: translate3d(0, 0, 75px);
+  transition: 0.5s;
+  opacity: 0;
+  z-index: 10;
+  padding-bottom: 10px auto;
+}
+
+
+.box-container .box:hover .price {
+  bottom: 75px;
+  opacity: 1;
+  font-size: 18px;
+}
+
+.box-container .box .buy {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform-style: preserve-3d;
+    transform: translate3d(-50%, 0, 100px);
+    color: #fff;
+    background: #333;
+    padding: 10px 25px;
+    border-radius: 30px;
+    text-decoration: none;
+    transition: 0.5s;
+    opacity: 0;
+    z-index: 14;
+    cursor: pointer;
+}
+
+.box-container .box:hover .buy {
+    bottom: 30px;
+    opacity: 1;
+}
+
+.box-container .box .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transition: 0.5s;
+    background: #fff;
+    transform-style: preserve-3d;
+    z-index: 10;
+    opacity: 1;
+    transform: translate3d(-50%, -50%, 50px);
+}
+
+.box-container .box .product {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-radius: 50%;
+    width: 180px;
+    height: 340px;
+    background: no-repeat;
+    transition: 0.5s;
+    z-index: 11;
+    /* transition: 0.5s; */
+    transform-style: preserve-3d;
+    transform: translate3d(-50%, -50%, 50px) rotate(-7deg);
+}
+
+.box-container .box:hover .product{
+    transform: translate3d(-50%, -50%, 80px) rotate(-7deg);
+}
+
+.box-container .box:nth-child(even) .circle,
+.box-container .box:nth-child(even) .buy {
+    background: #A37DCA;
+}
+
+.box-container .box:nth-child(odd) .circle,
+.box-container .box:nth-child(odd) .buy {
+    background: #CA7DA3;
 }
